src/styles/components/map/_buttons.scss
// Positions buttons in the header
app-map-footer {
  position: relative;
  float: right;

  .connect & {
    background-image: url('//crds-cms-uploads.s3.amazonaws.com/connect/brandbanner-logo-bg.jpg');
    background-size: cover;
    background-repeat: no-repeat;
  }

  .btn {
    vertical-align: top;

    &:hover,
    &:focus,
    &:active {
      color: $cr-white;
      text-decoration: none;
    }
  }

  .pipe {
    display: inline-block;
    width: 1px;
    height: 30px;
    margin-top: 5px;
    background-color: rgba($cr-gray-light, 0.5);
  }
}

// Styles "Update search" results button
search-local {
  display: block;
  position: absolute;
  bottom: 60px;
  left: calc(50% - 66px); // half screen width minus half of the button width
  z-index: 4;
}

